--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello World
+<html lang="en">
+    <head>
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+        <title>blissfulbin</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    </head>
+    <body>
+<!--Specific to the page-->
+          <div class="wrapper">
+          <div class="main container-fixed">
+            <div class="card inner mx-auto">
+              <audio controls autoplay loop
+                src="audio/lovestay.ogg" style="margin-bottom:5px;">
+                  Your browser does not support the audio element.
+              </audio>
+              <div class="section">
+                <span class="subtitle">Basics || About Me</span>
+              </div>
+              <header id="header">
+                <div id="container1" class="container columns">
+                  <div class="float-left">
+                     <img src="images/staybin.jpeg" alt="CHANGBIN">
+                  </div>
+                </div>
+                <div id="columns">
+                    <div id="container2" class="container columns">
+                      <span class="subtitle">BYF!&#127807; </span>
+                      feel free to dm! i tweet mainly about skz but also about genshin and how much I hate the gov't. sb to unfollow please
+                    </div>
+                    <div class="container columns" style="margin-left:-15px;">
+                    ~ &#x1F33B; ~
+                    </div>
+
+                    <div id="container3" class="container columns">
+                      <span class="subtitle">DNI!&#127807; </span>
+                      basic dni criteria, under 14, ot7/ot9 or kwj supporter
+                </div>
+                </div>
+              </header>
+            </div>
+          </div>
+          </div>
+
+<!--On every page-->
+        <div class="footer">
+            <br>
+            Copyright:  blissfulbin 2022, fuck carrd
+            <br>
+            <p style="font-size:12px;">credit: ksmcsans</p>
+        </div>
+    </body>
+</html>
