--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
                   Your browser does not support the audio element.
               </audio>
               <div class="section">
-                <span class="subtitle">Basics || About Me</span>
+                <span class="title">StayLissa</span>
+                <span class="subtitle links">Basics || About Me</span>
               </div>
               <header id="header">
                 <div id="container1" class="container columns">
                   <div class="float-left">
-                     <img src="images/staybin.jpeg" alt="CHANGBIN">
+                     <img id="bin" src="images/staybin.jpeg" alt="CHANGBIN">
                   </div>
                 </div>
                 <div id="columns">
                     <div id="container2" class="container columns">
                       <span class="subtitle">BYF!&#127807; </span>
-                      feel free to dm! i tweet mainly about skz but also about genshin and how much I hate the gov't. sb to unfollow please
+                      feel free to dm! i tweet mainly about skz but also about genshin
+                      and how much I hate the gov't. sb to unfollow pls
                     </div>
                     <div class="container columns" style="margin-left:-15px;">
                     ~ &#x1F33B; ~
@@ -34,8 +36,14 @@
 
                     <div id="container3" class="container columns">
                       <span class="subtitle">DNI!&#127807; </span>
-                      basic dni criteria, under 14, ot7/ot9 or kwj supporter
+                      basic dni criteria, under 14, ot7/ot9 or kwj supporter, anti skz
+
                 </div>
+                <div id="container4" class="container columns">
+                  <img id="doodle" src="images/airplane.png" alt="airplane doodle">
+
+            </div>
+
                 </div>
               </header>
             </div>
@@ -47,7 +55,7 @@
             <br>
             Copyright:  blissfulbin 2022, fuck carrd
             <br>
-            <p style="font-size:12px;">credit: ksmcsans</p>
+            <p style="font-size:12px;">credit: ksmscans</p>
         </div>
     </body>
 </html>
