New Site New Me

--- a/index.html
+++ b/index.html
@@ -16,36 +16,93 @@
               </audio>
               <div class="section">
                 <span class="title">StayLissa</span>
-                <span class="subtitle links">Basics || About Me</span>
+                <span class="title" style="float: right; margin-right: 10px;">thinking of changbin</span>
               </div>
-              <header id="header">
-                <div id="container1" class="container columns">
+              <section id="top">
+                <div id="container1" class="container">
                   <div class="float-left">
                      <img id="bin" src="images/staybin.jpeg" alt="CHANGBIN">
                   </div>
                 </div>
-                <div id="columns">
+                <div id="column">
                     <div id="container2" class="container columns">
                       <span class="subtitle">BYF!&#127807; </span>
-                      feel free to dm! i tweet mainly about skz but also about genshin
-                      and how much I hate the gov't. sb to unfollow pls
+                      feel free to dm! i tweet mainly about skz, genshin, how much
+                      I hate the gov't. i swear a lot, keysmash, sometimes forget tw/cw.
+                      sb to unfollow pls &#9829;
                     </div>
-                    <div class="container columns" style="margin-left:-15px;">
+                    <div class="container" style="margin-left:-15px;">
                     ~ &#x1F33B; ~
                     </div>
 
                     <div id="container3" class="container columns">
-                      <span class="subtitle">DNI!&#127807; </span>
-                      basic dni criteria, under 14, ot7/ot9 or kwj supporter, anti skz
+                      <span class="subtitle">DNF!&#127807; </span>
+                      basic dni criteria, under 16, ot7/ot9 or kwj supporter, anti skz
 
                 </div>
-                <div id="container4" class="container columns">
+                <div id="container4">
                   <img id="doodle" src="images/airplane.png" alt="airplane doodle">
 
             </div>
 
                 </div>
-              </header>
+                <div id="column-2">
+                  <div id="container5" class="container stan-list">
+                  <div class="title"> StanList: </div>
+                  <span class="ult">Stray Kids &#9829;</span>
+                  <div class="stan-info">
+                    I listen to other groups/artists casually.
+                  </div>
+                </br>
+              </br>
+                  <div class="lists">
+                  <div class="title" style="margin-top: 5px;"> Likes: </div>
+                </br>
+                  <div class="likes" style="margin-top: 25px; margin-bottom: -10px;">
+                    <ul id="likes">
+                      <li>cats</li>
+                      <li>genshin</li>
+                      <li>tea</li>
+                    </ul>
+                  </div>
+                  <div class="title"> Dislikes: </div>
+                  <div class="likes">
+                  </br>
+                </br>
+                    <ul id="dislikes">
+                      <li>gore</li>
+                      <li>insects</li>
+                      <li>shitty people</li>
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="disclaimer">
+                  <div class="title">Disclaimer!</div>
+                  <span class="text">I don't condone anything my faves have done, education is important.</span>
+                </div>
+              </div>
+
+              <div class="basic-info">
+                <div class="title" style="text-decoration: underline; margin-left: -5px;"> BasicInfo</div>
+                <br>
+                She/They
+                </br>
+                23
+                </br>
+                south asian
+                </br>
+                ENTJ-T/ENFJ-T
+                </br>
+                virgo sun
+              </br>
+                gemini moon
+              </div>
+                </div>
+              </section>
+              <section id="bottom">
+
+              </section>
             </div>
           </div>
           </div>
