--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
               </div>
 
               <div class="basic-info">
-                <div class="title" style="text-decoration: underline; margin-left: -5px;"> BasicInfo</div>
-                <br>
+                <span class="title" style="text-decoration: underline; margin-left: -5px;"> BasicInfo</span>
+              </br>
+              <div class="info-list">
                 She/They
                 </br>
                 23
@@ -97,6 +98,7 @@
                 virgo sun
               </br>
                 gemini moon
+              </div>
               </div>
                 </div>
               </section>
