--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </br>
                 23
                 </br>
-                south asian
+                South Asian
                 </br>
                 ENTJ-T/ENFJ-T
                 </br>
