--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div id="column-2">
                   <div id="container5" class="container stan-list">
                   <div class="title"> StanList: </div>
-                  <span class="ult">Stray Kids &#9829;</span>
+                  <span class="ult">Stray Kids &#9829; NMIXX</span>
                   <div class="stan-info">
                     I listen to other groups/artists casually.
                   </div>
@@ -89,7 +89,7 @@
               <div class="info-list">
                 She/They
                 </br>
-                23
+                23 || Bi
                 </br>
                 South Asian
                 </br>
